[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teleai-zenoh-wrapper"
version = "0.1.0"
description = "基于 Zenoh 的多机器人通信框架，提供 PubSub、RPC 及数据管理功能"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

authors = [
    { name = "Luluoy" },
]

dependencies = [
    "numpy<=2.0",
    "typing_extensions==4.15.0",
    "eclipse-zenoh==1.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]
transfer = [
    "paramiko>=3.5",   # sftp 支持
    "h5py>=3.12",      # hdf5 数据集读写
]

[project.urls]
Homepage = "https://github.com/Luluoy/teleai-zenoh-wrapper"
Repository = "https://github.com/Luluoy/teleai-zenoh-wrapper"
Issues = "https://github.com/Luluoy/teleai-zenoh-wrapper/issues"

# ━━━━━━━━━━ 包发现 ━━━━━━━━━━
[tool.setuptools.packages.find]
where = ["src"]

# ━━━━━━━━━━ Ruff 代码检查 ━━━━━━━━━━
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

# ━━━━━━━━━━ Pytest ━━━━━━━━━━
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]